fix: fix menu visibility

--- a/sources/styles/header.less
+++ b/sources/styles/header.less
@@ -149,13 +149,6 @@
   }
 }
 
-.logout-mobile-name {
-  color: white;
-  background: transparent;
-  position: absolute;
-  right: 20px;
-}
-
 /* userbar */
 .userbar {
   .userbar-avatar {
@@ -195,4 +188,8 @@
       margin-top: 2px;
     }
   }
+}
+
+.userbar-mobile {
+  color: @white-txt;
 }
